<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2013 Aurélien Chabot <aurelien@chabot.fr>

  This file is part of DroidUPNP.

  DroidUPNP is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  DroidUPNP is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with DroidUPNP.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <!-- General -->
    <string name="app_name" translatable="false">PlainUPnP</string>
    <string name="version">Version</string>

    <!-- Navigation drawer -->
    <string name="contentdirectory">Content directory</string>
    <string name="renderer">Renderer</string>
    <string name="device_list_empty">No device available</string>
    <string name="navigation_drawer_open">Open device list</string>
    <string name="navigation_drawer_close">Close device list</string>

    <!--  Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_search">Search</string>
    <string name="home">Home</string>

    <!-- Option -->
    <string name="pref_contentdirectory_title">Content Directory</string>
    <string name="pref_contentdirectory_desc">Activate a local Content Directory server</string>
    <string name="pref_contentDirectory_display_name">Display Name</string>
    <string name="pref_contentDirectory_share_contentdirectory">Share media</string>
    <string name="pref_contentDirectory_share_contentdirectory_desc">Share media with other device on network</string>
    <string name="pref_share_media_title">Type of media to share</string>
    <string name="pref_contentDirectory_audio_title">Audio</string>
    <string name="pref_contentDirectory_audio_desc">Share audio</string>
    <string name="pref_contentDirectory_directory_title">Directories</string>
    <string name="pref_contentDirectory_directory_desc">Share internal and external storage</string>
    <string name="pref_contentDirectory_image_title">Image</string>
    <string name="pref_contentDirectory_image_desc">Share image</string>
    <string name="pref_contentDirectory_probeMimetype_title">Probe mimetype</string>
    <string name="pref_contentDirectory_probeMimetype_desc">Guess mimetype from file content instead of extension in
		directory tree</string>
    <string name="pref_contentDirectory_video_title">Video</string>
    <string name="pref_contentDirectory_video_desc">Share video</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_desc"></string>

    <!-- Popup -->
    <string name="OK">OK</string>
    <string name="loading">Loading…</string>
    <string name="selectRenderer">Select a Renderer</string>
    <string name="noRenderer">There is no renderer available</string>

    <!-- Long click options -->
    <string name="no_action_available">No action available</string>
    <string name="failed_action">Failed to read the item</string>

    <!-- Now Playing -->
    <string name="duration">00:00:00</string>

    <!-- Now Playing Footer -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>

    <!-- Device Info -->
    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturer_url">Manufacturer URL</string>
    <string name="model_name">Model name</string>
    <string name="model_url">Model URL</string>
    <string name="model_number">Model number</string>
    <string name="model_desc">Model description</string>
    <string name="presention_url">Presentation URL</string>
    <string name="desc_xml">Description XML</string>
    <string name="udn">UDN</string>
    <string name="separator"> : </string>

    <!-- About -->
    <string name="copyright">Copyright</string>
    <string name="about_copyright">Copyright © 2014 Aurélien Chabot</string>
    <string name="license">License</string>
    <string name="about_license" translatable="false">GPLv3</string>
    <string name="link_license" translatable="false">http://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="licenses_other">Library licenses</string>
    <string name="source">Source Code</string>
    <string name="source_url" translatable="false">http://github.com/trishika/droidupnp</string>
    <string name="active_content_directory_description">Activate a local Content Directory server</string>
    <string name="content_directory_title">Content Directory</string>
    <string name="switch_theme">Switch theme</string>
    <string name="empty_content" translatable="false">-</string>
    <string name="to_exit">Double tap back button to exit</string>
    <string name="about_licenses_other" />
    <string name="general_category">General</string>
    <string name="upnp_category">UPnP</string>

    <string name="dark_theme_key" translatable="false">dark_theme_enabled_key</string>
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="share_images">Enable images</string>
    <string name="share_music">Enable music</string>
    <string name="share_videos">Enable videos</string>
    <string name="app_url">placeholder</string>

    <string name="search">Search…</string>

</resources>
